--- a/frontend/index.html
+++ b/frontend/index.html
@@ -25,8 +25,8 @@
 
             </div>
             <div>
-                <div>SIGN UP</div>
-                <div>LOG IN</div>
+                <div><a href="./sigup.html" style="text-decoration: none;">SIGN UP</a></div>
+                <div><a href="./login.html" style="text-decoration: none;"> LOG IN</a></div>
             </div>
 
         </nav>
